--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@angular/core": "^20.0.5",
     "@angular/forms": "^20.0.5",
     "@angular/material": "^20.0.4",
+    "@angular/material-experimental": "^20.0.4",
     "@angular/platform-browser": "^20.0.5",
     "@angular/router": "^20.0.5",
     "json-server": "^1.0.0-beta.3",
