dashboard, resolvers, loading and unit testing

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,7 +21,7 @@
     "strictInjectionParameters": true,
     "strictInputAccessModifiers": true,
     "typeCheckHostBindings": true,
-    "strictTemplates": true
+    "strictTemplates": true,
   },
   "files": [],
   "references": [
